# depth_benchmark

./: .gitignore  README.md  args_to_launch_json.py  download_skyscenes_batch.sh  download_skyscenes_segmentation_batch.sh  environment.yml  evaluate_skyscenes_batch.sh  evaluate_skyscenes_segmentation_batch.sh  pyproject.toml
configs/: default.yaml
depth_benchmark/: __init__.py  benchmark.py  segmentation_benchmark.py
depth_benchmark/datasets/: __init__.py  base.py  custom.py  registry.py  skyscenes.py
depth_benchmark/metrics/: __init__.py  depth_metrics.py  segmentation_metrics.py
depth_benchmark/models/: __init__.py  base.py  moge.py  ransac_segmentation.py  registry.py  segformer.py  segmentation_base.py  segmentation_registry.py
depth_benchmark/utils/: __init__.py
scripts/: download_skyscenes.sh  download_skyscenes_segmentation.sh  evaluate_skyscenes.py  evaluate_skyscenes_segmentation.py  extract_skyscenes.sh  plot_error_vs_depth.py
